final ver